deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 3
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: 396608811323.dkr.ecr.us-east-1.amazonaws.com/legalario:nginx-test-v0.3
        ports:
        - containerPort: 80
