service.yaml
apiVersion: v1
kind: Service
metadata:
  name: legalariocicd
spec:
  selector:
    app: legalariocicd
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
